[package]
name = "dbin"
version = "0.1.3"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/math4tots/dbin"
description = "Regex-like utility for parsing and rendering binary data"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
